# Printer

./: CMakeLists.txt  README.md  deneme.txt
Printer-Runtime/: CMakeLists.txt
Printer-Runtime/src/: CMakeLists.txt  main.cpp  resources.qrc
Printer-Runtime/src/qml/: CoordinateDisplay.qml  MainWindow.qml  TemperatureDisplay.qml
Printer/src/Printer/: CMakeLists.txt  Printer.h
Printer/src/Printer/Core/: Application.cpp  Application.h  ApplicationSpecification.h  Assert.h  Base.h  Log.cpp  Log.h  SignalHandler.cpp  SignalHandler.h
Printer/src/Printer/GPIO/: Controller.cpp  Controller.h  PinController.cpp  PinController.h  STM32MP157F-DK2.h
Printer/src/Printer/IO/: Shared.h
Printer/src/Printer/Motion/: Controller  Controller.cpp  Controller.h  Interpreter.h  PrintRunner.h  RS274NGCInterpreter.h  Stepper.cpp  Stepper.h  SymbolTable.h
Printer/src/Printer/Temperature/: Controller.h  LeadLagCompensator.h  PIDController.h
Printer/src/Printer/UI/: CoordinateProvider.cpp  CoordinateProvider.h  TemperatureProvider.cpp  TemperatureProvider.h
